tests/sksl/errors/ReservedNamePublic.glsl
### Compilation failed:

error: 1: name 'public' is reserved
int public;
    ^^^^^^
1 error
